plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.reco'
version = '0.0.1-SNAPSHOT'
description = 'Recommendation service'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Web (이거 하나면 충분)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Validation (필요하면 유지)
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    runtimeOnly 'com.mysql:mysql-connector-j'

    // Swagger (springdoc)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

    // Lombok (쓰면 유지)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test (이거 하나로 정리)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}


// One source of images; package only validated thumbnails, never empty placeholders.
tasks.register('prepareNoteAssets', Exec) {
    workingDir rootProject.projectDir.parentFile
    commandLine 'python3', 'scripts/prepare_assets.py'
    inputs.dir('../perfume-frontend/public')
    inputs.file('../scripts/prepare_assets.py')
    outputs.dir(layout.buildDirectory.dir('generated-assets'))
}
tasks.named('processResources') {
    dependsOn 'prepareNoteAssets'
    from(layout.buildDirectory.dir('generated-assets'))
}
